src/test/ui/where-clauses/where-lifetime-resolution.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/where-lifetime-resolution.rs:6:38
   |
LL | fn f() where
   |     - help: consider introducing lifetime `'a` here: `<'a>`
LL |     for<'a> dyn Trait1<'a>: Trait1<'a>, // OK
LL |     (dyn for<'a> Trait1<'a>): Trait1<'a>,
   |                                      ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/where-lifetime-resolution.rs:8:52
   |
LL | fn f() where
   |     - help: consider introducing lifetime `'b` here: `<'b>`
...
LL |     for<'a> dyn for<'b> Trait2<'a, 'b>: Trait2<'a, 'b>,
   |                                                    ^^ undeclared lifetime
   |
   = help: if you want to experiment with in-band lifetime bindings, add `#![feature(in_band_lifetimes)]` to the crate attributes

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0261`.
